data/diff_tests/wasmtime/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2553.wast
;; **Test 2: Imported function with stack mismanagement and br_table jump** - Module B imports a function that calls a sequence ending with `br_table` from Module A. - The function in Module A mismanages the stack, leading to mismatches in expected operand count. - Test evaluates whether `wizard_engine` halts due to incorrect stack unwinding while WebAssembly executes erroneously.

(assert_invalid
  (module
    (import "A" "mismanaged_br_table" (func $mismanaged_br_table (param i32)))
    (func (export "start")
      (call $mismanaged_br_table (i32.const 1))
    )
  )
  "stack mismanagement"
)